--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
                 <div class="container"></section>
                   <figure>
                     <div class="chile">
-                      <img src = 'Chile.png' alt="beach with cliffs" align="left">
+                      <img src = 'Chile.png' alt="beach with cliffs">
                       <figcaption class="left">Chile, 2001</figcaption>
                     </div>
                   </figure>
                   
                   <figure>
-                  <img src = 'Guatemala.png' alt="purple sunset with lavendar flowers" align="center">
+                  <img src = 'Guatemala.png' alt="purple sunset with lavendar flowers">
                   <figcaption class="white left">Guatemala, 1997</figcaption>                    
                   </figure>
 
                   <figure>
-                  <img src = 'Hawaii.png' alt="ocean and mountains" align="right">
+                  <img src = 'Hawaii.png' alt="ocean and mountains">
                   <figcaption class="white right">Hawaii, 2010</figcaption>                 
                   </figure>
                 </section>
